refactor ja.yml

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,36 +1,38 @@
 ja:
-  column_memos:
-    update:
-      success: "メモを更新しました"
-  sessions:
-    create:
-      danger: "ログインに失敗しました"
   activerecord:
+    attributes:
+      user: &user_attributes
+        name: 名前
+        email: メールアドレス
+        is_admin: 管理者
+      product: &product_attributes
+        name: 名前
+        env_prefix: 環境変数プレフィックス
   errors:
     format: "%{attribute}%{message}"
     messages:
-      accepted: を受諾してください
       blank: を入力してください
-      confirmation: と%{attribute}の入力が一致しません
-      empty: を入力してください
-      equal_to: は%{count}にしてください
-      even: は偶数にしてください
-      exclusion: は予約されています
-      greater_than: は%{count}より大きい値にしてください
-      greater_than_or_equal_to: は%{count}以上の値にしてください
-      in: は%{count}の範囲に含めてください
-      inclusion: は一覧にありません
       invalid: は不正な値です
-      less_than: は%{count}より小さい値にしてください
-      less_than_or_equal_to: は%{count}以下の値にしてください
-      model_invalid: 'バリデーションに失敗しました: %{errors}'
-      not_a_number: は数値で入力してください
-      not_an_integer: は整数で入力してください
-      odd: は奇数にしてください
-      other_than: は%{count}以外の値にしてください
-      present: は入力しないでください
-      required: を入力してください
-      taken: はすでに存在します
-      too_long: は%{count}文字以内で入力してください
-      too_short: は%{count}文字以上で入力してください
-      wrong_length: は%{count}文字で入力してください
+      taken: は既に使用されています
+  users:
+    index:
+      <<: *user_attributes
+      action: アクション
+    create:
+      success: を作成しました
+    update:
+      success: を更新しました
+  products:
+    index:
+      <<: *product_attributes
+      action: アクション
+    create:
+      success: を作成しました
+    update:
+      success: を更新しました
+  column_memos:
+    update:
+      success: メモを更新しました
+  sessions:
+    create:
+      danger: ログインに失敗しました
